crates/datarig-tui/tests/snapshots/ui_snapshots__cell_viewer_pretty_prints_jsonb.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: "h.draw(120, 30).backend()"
---
"╭ Explorer ──────────────────╮ 1 console 1 ×                                                                            "
"│  ＋ New connection         │╭ Query · console 1 ─────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg              ││ local-pg / datarig  127.0.0.1:55432 · policy: default      Space c s switch connection │"
"│  ▾ datarig╭ Cell value — profile ────────────────────────────────────────────────────────────────────────╮           │"
"│    ▸ analy│ {                                                                                            │           │"
"│    ▸ publi│   "lang": "ko",                                                                              │           │"
"│    ▸ shop │   "tags": [                                                                                  │           │"
"│           │     "dev",                                                                                   │           │"
"│           │     "db"                                                                                     │           │"
"│           │   ]                                                                                          │           │"
"│           │ }                                                                                            │           │"
"│           │                                                                                              │───────────╯"
"│           │                                                                                              │───────────╮"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           │                                                                                              │           │"
"│           ╰──────────────────────────────────────────────────────────────────────────────── Esc to close ╯           │"
"│                            ││                                                    ││                                  │"
"│                            ││                                                    ││                                  │"
"╰────────────────────────────╯╰────────────────────────────────────────────────────╯╰──────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ 8 rows · 12ms                                   │ Ctrl+E run · Ctrl+K commands EN "
