crates/datarig-tui/tests/snapshots/ui_snapshots__chooser_icon_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ×                                                                                                          "
"│  ＋ New connection                   │╭ Query · console 1 ───────────────────────────────────────────────────────────────────────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●  local-pg                        ││  local-pg / datarig  127.0.0.1:55432 · policy: default                                  Space c s switch connection │"
"│  ▾  datarig default                 ││  1 -- datarig 🐘  Ctrl+E: run the statement under the cursor                                                         │" Hidden by multi-width symbols: [(57, " ")]
"│    ▸ 󱋣 analytics                     ││  2▎SELECT * FROM shop.users WHERE id <= 8;                                                                           │"
"│    ▸ 󱋣 public                        ││  3                                                                                                                   │"
"│    ▸ 󱋣 shop                          ││  4 SELECT u.name, o.status, o.total_amount                                                                           │"
"│▸ ○  分析-replica                    ││  5 FROM sh╭ Icon ────────────────────────────────────────────────╮                                                   │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│▸ ○  分析-replica                    ││  6 JOIN sh│ /                                                    │                                                   │" Hidden by multi-width symbols: [(8, " "), (10, " ")]
"│                                      ││  7 WHERE o│                                                      │                                                   │"
"│                                      ││  8        │  the driver's icon                                  │                                                   │"
"│                                      ││  9 SELECT │  database                                           │                                                   │"
"│                             ╭ Edit connection — lo│  server                                             │─────────────────────╮                             │"
"│                             │  Basic   SSH   Advan│  cloud                                              │trl+N/Ctrl+P section │                             │"
"│                             │                     │  cube                                               │                     │                             │"
"│                             │ SSL mode          ‹ │  cubes                                              │                     │                             │"
"│                             │ Statement cache   ‹ │  leaf                                               │ode                  │                             │"
"│                             │ Policy              │  fire                                               │                     │                             │"
"│                             │ Color             ‹ │  bolt                                               │                     │                             │"
"│                             │ Icon              ‹ │  shield                                             │                     │                             │"
"│                             │ Folder            ‹ │  lock                                               │                     │                             │"
"│                             │                     │  flask                                              │                     │                             │"
"│                             │                     │  bug                                                │                     │                             │"
"│                             │                     │  rocket                                             │                     │                             │"
"│                             │                     │  home                                               │                     │                             │"
"│                             │                     │  laptop                                             │                     │                             │"
"│                             │                     │  building                                           │                     │                             │"
"│                             │                    T│  briefcase                                          │                     │                             │"
"│                             │                     │  globe                                              │                     │                             │"
"│                             │                     │  chart                                              │                     │                             │"
"│                             ╰─────────────────────│  archive                                            │+S save · Esc cancel ╯                             │"
"│                                      ││           │  bookmark                                           │                                                   │"
"│                                      ││           │  star                                               │                                                   │"
"│                                      ││           │  heart                                              │                                                   │"
"│                                      ││           │  warning                                            │                                                   │"
"│                                      ││           ╰─────── ↑↓ select · / filter · Enter pick · Esc close ╯                                                   │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"│                                      ││                                                                                                                      │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                                                                                  EN "
